--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,9 +9,13 @@
     <string name="toolbar_title_connected">Conectado</string>
     <string name="toolbar_title_disconnected">Desconectado</string>
 
-    <string name="text_view_home">TextView</string>
-    <string name="text_view_guest">LOCAL</string>
-    <string name="text_view_faltas">Faltas</string>
+    <string name="text_view_home">Local</string>
+    <string name="text_view_guest">Visita</string>
+    <string name="text_view_violations">Faltas</string>
+
+    <string name="characters_allowed_message">!&#32;&#34;#$%&#39;()*+,-./0123456789:;&#60;=>?@ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyzñÑ</string>
+    <string name="characters_allowed_login">0123456789</string>
+
 
     <string name="text_about_website">www.citsadigital.com</string>
     <string name="text_about_phone">Tels: (81)8478–7965 y 66</string>
@@ -22,7 +26,11 @@
 
     <string name="button_text_about_visit_us">Visítanos</string>
 
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="message_no_bonded_devices">No hay dispositivos sincronizados</string>
+
+
     <string name="bottom_navigation_title_home">Principal</string>
     <string name="bottom_navigation_title_settings">Ajustes</string>
+    <string name="pref_title_category_time">Tiempo</string>
+    <string name="text_view_title_set">Set</string>
 </resources>
