--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -121,5 +121,14 @@
     <string name="pref_key_time_sell">key_time_sell</string>
     <string name="pref_key_device_address">DeviceAddressKey</string>
 
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="radio_group_title_time_format">Formato de hora</string>
+    <string name="radio_button_hours_minutes">Horas:Minutos</string>
+    <string name="radio_button_minutes_seconds">Minutos:Segundos</string>
+    <string name="radio_button_ascending">Ascendente</string>
+    <string name="radio_button_descending">Descendente</string>
+    <string name="radio_group_title_counting_mode">Modo de conteo</string>
+
 
 </resources>
